--- a/templates/assets/css/beauty.less
+++ b/templates/assets/css/beauty.less
@@ -1,5 +1,5 @@
-//首页大图
-/* 额外补充大图样式*/
+//首頁大圖
+/* 額外補充大圖樣式*/
 .evan-big-banner {
   position: relative;
   width: 100%;
@@ -200,7 +200,7 @@
     transform: scale(1);
   }
 }
-/* 额外补充大图样式 */
+/* 額外補充大圖樣式 */
 .evan-big-banner_goto {
   position: absolute;
   left: 50%;
@@ -223,7 +223,7 @@
 .parallax > use{animation: move-forever 12s linear infinite;}.parallax > use:nth-child(1){animation-delay: -2s;}.parallax > use:nth-child(2){animation-delay: -2s; animation-duration: 5s;}.parallax > use:nth-child(3){animation-delay: -4s; animation-duration: 3s;}@keyframes move-forever{0%{transform: translate(-90px, 0%);} 100%{transform: translate(85px, 0%);}}.evan-big-banner_bottom{width: 100%;height: 40px;position: relative;overflow: hidden;z-index: 1;background: var(--footer-bg);}.editorial{display: block; width: 100%; height: 40px; margin: 0;}
 
 .evan-friends {
-  // 其他相关样式...
+  // 其他相關樣式...
 
   .sub-text {
     word-break: break-all;
