--- a/templates/assets/css/journals.less
+++ b/templates/assets/css/journals.less
@@ -294,7 +294,7 @@
           }
         }
 
-        // 控制带删除线的a标签是否可点击
+        // 控制帶刪除線的a標籤是否可點選
         // del>a {
         //   pointer-events: none;
         //   cursor: not-allowed;
