--- a/templates/assets/css/normalize.less
+++ b/templates/assets/css/normalize.less
@@ -9,7 +9,7 @@
 html {
 
   // font-family: "Helvetica Neue", Helvetica, "PingFang SC", "Hiragino Sans GB",
-  //   "Microsoft YaHei", "微软雅黑", Arial, sans-serif;
+  //   "Microsoft YaHei", "微軟雅黑", Arial, sans-serif;
   &.disable-scroll {
     height: 100vh;
     overflow: hidden;
@@ -126,6 +126,6 @@ table {
   border-spacing: 0;
 }
 
-a[title="站长统计"] {
+a[title="站長統計"] {
   display: none;
 }
