--- a/templates/assets/css/post.less
+++ b/templates/assets/css/post.less
@@ -1,4 +1,4 @@
-/* 文章页面的样式 */
+/* 文章頁面的樣式 */
 .joe_bread {
   margin: 20px auto 0;
   padding: 15px 15px 0;
@@ -527,7 +527,7 @@
     box-shadow: 0 0 0 0 var(--theme);
   }
 }
-// 评论区 GIF 位置及大小调整
+// 評論區 GIF 位置及大小調整
 .wl-gif-popup.display{
   bottom: 100% !important;
   top:auto !important;
