--- a/templates/assets/css/theme.less
+++ b/templates/assets/css/theme.less
@@ -1,7 +1,7 @@
-// 全局CSS变量
+// 全域性CSS變數
 html {
   --font-default: "Helvetica Neue", Helvetica, "PingFang SC", "Hiragino Sans GB",
-    "Microsoft YaHei", "微软雅黑", Arial, "sans-serif";
+    "Microsoft YaHei", "微軟雅黑", Arial, "sans-serif";
   /* --theme: #fb6c28; */
   --background-reverse: #000;
   --background: #fff;
@@ -113,7 +113,7 @@ html {
     --animation-notice: twinkle-night 1s ease infinite alternate;
     background: var(--background);
 
-    // 暗黑模式下需要修改的样式
+    // 暗黑模式下需要修改的樣式
     body:after {
       background: #2b2b2b;
       z-index: -200;
