--- a/templates/category.html
+++ b/templates/category.html
@@ -6,7 +6,7 @@
     <body>
     <div id="Joe">
       <th:block th:replace="~{modules/macro/navbar :: navbar}" />
-      <!--          首页大图-->
+      <!--          首頁大圖-->
       <th:block th:if="${theme.config.beauty.enable_big_banner}">
         <th:block th:replace="~{modules/macro/big_banner :: big_banner(${title})}" />
       </th:block>
@@ -18,7 +18,7 @@
               <div class="joe_archive__title-title">
                 <i class="joe-font joe-icon-feather joe_archive__title-icon"></i>以下是
                 <span class="muted ellipsis">[[${category.spec.displayName}]]</span>
-                <span>相关的文章</span>
+                <span>相關的文章</span>
               </div>
             </div>
 
