--- a/templates/error/404.html
+++ b/templates/error/404.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN" xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="utf-8">
-  <title>未找到您要的资源 - [[${site.title}]]</title>
+  <title>未找到您要的資源 - [[${site.title}]]</title>
   <meta name="renderer" content="webkit">
   <meta name="format-detection" content="email=no">
   <meta name="format-detection" content="telephone=no">
@@ -106,8 +106,8 @@
 <div class="joe_page_404">
   <div class="error">
     <img th:src="@{/assets/svg/404.svg}" alt="404">
-    <h3 class="title">“未找到您要的资源”</h3>
-    <a href="/" class="error_link">回到主页</a>
+    <h3 class="title">“未找到您要的資源”</h3>
+    <a href="/" class="error_link">回到主頁</a>
   </div>
 </div>
 </body>
