--- a/templates/modules/donate.html
+++ b/templates/modules/donate.html
@@ -8,17 +8,17 @@
       th:classappend="${theme.config.post.qrcode_zfb != '' && theme.config.post.qrcode_wx != '' ?'two':''}">
     <th:block th:if="${theme.config.post.qrcode_zfb} and ${#strings.trim(theme.config.post.qrcode_wx) != ''}">
     <li>
-      <p>支付宝打赏</p>
+      <p>支付寶打賞</p>
       <img th:src="${theme.config.post.qrcode_zfb}"  alt="qrcode alipay"/></li>
     </th:block>
     <th:block th:if="${theme.config.post.qrcode_wx} and ${#strings.trim(theme.config.post.qrcode_wx) != ''}">
     <li>
-      <p>微信打赏</p>
+      <p>微信打賞</p>
       <img th:src="${theme.config.post.qrcode_wx}"  alt="qrcode weixin"/></li>
     </th:block>
     <th:block th:if="${theme.config.post.qrcode_qq} and ${#strings.trim(theme.config.post.qrcode_qq) != ''}">
     <li>
-      <p>QQ打赏</p>
+      <p>QQ打賞</p>
       <img th:src="${theme.config.post.qrcode_qq}"  alt="qrcode qq"/></li>
     </th:block>
 </ol>
