--- a/templates/modules/key_css.html
+++ b/templates/modules/key_css.html
@@ -38,7 +38,7 @@
             --scroll-bar: [[${theme.config.theme.scrollbar_color ?: '#c0c4cc'}]];
             --loading-bar:  [[${theme.config.theme.loading_bar_color ?: 'var(--theme)'}]];
             --img-max-width: 100%;
-            font-family: "Joe Font", "Helvetica Neue", Helvetica, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "微软雅黑", Arial, "sans-serif";
+            font-family: "Joe Font", "Helvetica Neue", Helvetica, "PingFang SC", "Hiragino Sans GB", "Microsoft YaHei", "微軟雅黑", Arial, "sans-serif";
 
 
 
@@ -51,7 +51,7 @@
             --wave-color: [[${theme.config.beauty.dark_color}?:'#fff']];
             --scroll-bar: [[${theme.config.theme.scrollbar_color ?: '#666'}]];
             --loading-bar: [[${theme.config.theme.loading_bar_color ?: 'var(--theme)'}]];
-            //    搜索框
+            //    搜尋框
             --halo-search-widget-color-modal-layer: rgba(10, 11, 12, 0.8);
             --halo-search-widget-color-modal-content-bg: rgb(27, 27, 30);
             --halo-search-widget-color-form-input: rgb(255, 255, 255);
