--- a/templates/modules/link.html
+++ b/templates/modules/link.html
@@ -10,7 +10,7 @@
   <link rel="apple-touch-icon" sizes="180x180" th:href="${site.favicon}">
   <th:block th:replace="~{modules/key_css :: key_css}" />
   <th:block th:if="${theme.config.theme.enable_loading_bar}">
-<!-- 加载条 -->
+<!-- 載入條 -->
     <link rel="stylesheet" th:href="${source_link+'/assets/lib/nprogress/nprogress.min.css'}">
     <style th:inline="text">
       #nprogress .bar {
