--- a/templates/modules/macro/big_banner.html
+++ b/templates/modules/macro/big_banner.html
@@ -13,14 +13,14 @@
     </th:block>
   <div class="infomation">
     <div id="EvanBigBanner_Title" class="title">
-      <!-- 标题区域 -->
+      <!-- 標題區域 -->
       <span id="EvanBigBanner_SubTitle" style="opacity: 0;">
                 [[${htmlType == 'index'? site.title : title}]]
             </span>
     </div>
     <div class="desctitle hitokoto_desctitle">
       <div id="HitokotoText" class="motto joe_motto hitokoto_text">
-        <!-- 一言，内容 -->
+        <!-- 一言，內容 -->
       </div>
       <div id="HitokotoForm" class="motto joe_motto hitokoto_form">
         <!-- 一言，作者 -->
