--- a/templates/modules/themeSettingVariable.html
+++ b/templates/modules/themeSettingVariable.html
@@ -84,7 +84,7 @@
 
       
     }
-    //转数字
+    //轉數字
     ThemeConfig.banner_speed = parseInt(ThemeConfig.banner_speed)
     ThemeConfig.banner_delay = parseInt(ThemeConfig.banner_delay)
     ThemeConfig.toc_depth = parseInt(ThemeConfig.toc_depth)
