--- a/templates/assets/css/global.less
+++ b/templates/assets/css/global.less
@@ -205,7 +205,7 @@ body {
     overflow-x: auto;
   }
 
-  // ==== 代码块样式 start
+  // ==== 程式碼塊樣式 start
   code:not([class]) {
     display: inline-block;
     font-size: 13px;
@@ -439,7 +439,7 @@ body {
     }
   }
 
-  // 代码块样式 end ====
+  // 程式碼塊樣式 end ====
 }
 
 .joe_main {
@@ -1474,7 +1474,7 @@ body {
           list-style: none;
         }
 
-        // TODO:【待修复】移动端弹窗时会丢失滚动高度，导致TOC目录高亮状态丢失
+        // TODO:【待修復】移動端彈窗時會丟失滾動高度，導致TOC目錄高亮狀態丟失
         // &>li>a {
         //   font-weight: bold;
 
@@ -4779,7 +4779,7 @@ body {
       }
     }
 
-    // 控制带删除线的a标签是否可点击
+    // 控制帶刪除線的a標籤是否可點選
     // del>a {
     //   pointer-events: none;
     //   cursor: not-allowed;
@@ -6590,13 +6590,13 @@ body {
     z-index: 90;
   }
 }
-//登入按钮样式
+//登入按鈕樣式
 .nav_login {
   display: flex;
   align-items: center;
   justify-content: center;
   height: 34px;
-  //background-color: var(--theme); // 你可以用LESS变量替换这里
+  //background-color: var(--theme); // 你可以用LESS變數替換這裡
   //margin-right: 10px;
   margin-left: 15px;
 
@@ -6614,7 +6614,7 @@ body {
     transition: background-color 0.3s, color 0.3s;
 
     &:hover {
-      background-color: var(--theme); // 这里的变量可以是LESS的全局变量
+      background-color: var(--theme); // 這裡的變數可以是LESS的全域性變數
       color: #f2f2f2;
     }
   }
@@ -6719,7 +6719,7 @@ body {
   animation: none;
 }
 
-// 动画
+// 動畫
 .showInUp {
   animation: showInUp 0.35s;
 }
@@ -7254,7 +7254,7 @@ body {
   }
 }
 
-// 媒体查询
+// 媒體查詢
 @media (min-width: 576px) {
   #Joe>.joe_container {
     max-width: 540px;
