--- a/templates/assets/css/photos.less
+++ b/templates/assets/css/photos.less
@@ -721,18 +721,18 @@ hr {
     margin-bottom: 15px;
     box-sizing: border-box;
     padding: 5px;
-    height: auto; /* 预设高度可以改善布局的稳定性 */
+    height: auto; /* 預設高度可以改善佈局的穩定性 */
 
     img {
       width: 100%;
-      height: auto; /* 保持图片宽高比 */
+      height: auto; /* 保持圖片寬高比 */
       display: block;
-      object-fit: cover; /* 防止图片变形 */
+      object-fit: cover; /* 防止圖片變形 */
       border-radius: var(--radius-wrap);
     }
   }
 
-  /* 电脑大屏幕，一行4张 */
+  /* 電腦大螢幕，一行4張 */
   @media (min-width: 1200px) {
     .grid-item { width: calc(25%); }
   }
