--- a/templates/assets/lib/dplayer/web/dplayer-source.html
+++ b/templates/assets/lib/dplayer/web/dplayer-source.html
@@ -32,25 +32,25 @@
 <script>
   var getUrlParams = function (key) {
     var search = location.search;
-    // 判断是否为字符串类型
+    // 判斷是否為字串型別
     if (typeof search !== "string") {
       search = search.toString();
     }
     var paramsSplit = search.replace(/^[^\?]*\?/i, "").split(/&/);
     var params = {};
-    // 数据为空
+    // 資料為空
     if (paramsSplit.length < 1) {
       return params;
     }
     if (Array.isArray(paramsSplit)) {
       paramsSplit.forEach(function (item) {
-        // 数据为空, 退出方法
+        // 資料為空, 退出方法
         if (!item) {
           return false;
         }
         var itemSplit = item.split(/=/);
 
-        // 判断字符串中是否有多个=
+        // 判斷字串中是否有多個=
         if (itemSplit.length >= 2) {
           // 是
           var key = itemSplit.splice(0, 1);
@@ -63,13 +63,13 @@
 
   new DPlayer({
     container: document.getElementById('dplayer'), // 播放器容器元素
-    autoplay: false, // 视频自动播放
-    theme: '#409eff', // 主题色
-    loop: false, // 视频循环播放
-    screenshot: false, // 开启截图，如果开启，视频和视频封面需要允许跨域
-    airplay: true, // 在 Safari 中开启 AirPlay
-    volume: 0.5, // 默认音量，请注意播放器会记忆用户设置，用户手动设置音量后默认音量即失效
-    playbackSpeed: [2, 1.5, 1.25, 1], // 可选的播放速率，可以设置成自定义的数组
+    autoplay: false, // 影片自動播放
+    theme: '#409eff', // 主題色
+    loop: false, // 影片迴圈播放
+    screenshot: false, // 開啟截圖，如果開啟，影片和影片封面需要允許跨域
+    airplay: true, // 在 Safari 中開啟 AirPlay
+    volume: 0.5, // 預設音量，請注意播放器會記憶使用者設定，使用者手動設定音量後預設音量即失效
+    playbackSpeed: [2, 1.5, 1.25, 1], // 可選的播放速率，可以設定成自定義的陣列
     video: {
       url: getUrlParams('url')
     }
