--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
       <div id="Joe">
 <!--          navbar-->
           <th:block th:replace="~{modules/macro/navbar :: navbar}" />
-<!--          首页大图-->
+<!--          首頁大圖-->
           <th:block th:if="${theme.config.beauty.enable_big_banner}">
               <th:block th:replace="~{modules/macro/big_banner :: big_banner(${title})}" />
           </th:block>
@@ -16,11 +16,11 @@
           th:classappend="|${theme.config.theme.enable_show_in_up ? 'animated showInUp':''} ${theme.config.aside.aside_position == 'left' ? 'revert':''}|">
               <div class="joe_main">
                   <div class="joe_index">
-<!--                      轮播图-->
+<!--                      輪播圖-->
                       <th:block th:if="${theme.config.carousel.enable_banner} and ${not #lists.isEmpty(theme.config.carousel.banner_data_group)}">
                           <th:block th:replace="~{modules/macro/banner :: banner}" />
                       </th:block>
-<!--                      热门模块-->
+<!--                      熱門模組-->
 
                       <th:block th:if="${theme.config.home.enable_hot_category} and ${not #lists.isEmpty(theme.config.home.data_hot_category)}">
                           <th:block th:replace="~{modules/macro/hot_category :: hot_category(data=${theme.config.home.data_hot_category})}" />
@@ -57,7 +57,7 @@
                   <th:block th:if="${posts.hasNext()} and ${theme.config.home.enable_index_list_ajax}">
                       <div class="joe_load_container"
                            th:with="nextPage = ${posts.totalPages == posts.page?'':posts.nextUrl}">
-                      <div class="joe_load" th:data-next="@{${nextPage}}">查看更多 </div>
+                      <div class="joe_load" th:data-next="@{${nextPage}}">檢視更多 </div>
 
                       </div>
                   </th:block>
@@ -68,7 +68,7 @@
               </th:block>
           </div>
 
-<!--悬浮按钮-->
+<!--懸浮按鈕-->
           <th:block th:if="${theme.config.post.enable_mobile_toc} or ${theme.config.theme.enable_back2top} or ${theme.config.basic.theme_mode == 'user'}">
               <th:block th:replace="~{modules/common/actions :: actions}" />
           </th:block>
