--- a/templates/links.html
+++ b/templates/links.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
-      th:replace="~{modules/layout :: html(title = '友链'+'-'+${site.title},htmlType = links,header = null,leftSidebar = true,content = ~{::content}, head = null, footer = null)}"
+      th:replace="~{modules/layout :: html(title = '友鏈'+'-'+${site.title},htmlType = links,header = null,leftSidebar = true,content = ~{::content}, head = null, footer = null)}"
 >
 <th:block th:fragment="content">
 
   <body>
   <div id="Joe">
     <th:block th:replace="~{modules/macro/navbar :: navbar}" />
-    <!--          首页大图-->
+    <!--          首頁大圖-->
     <th:block th:if="${theme.config.beauty.enable_big_banner}">
       <th:block th:replace="~{modules/macro/big_banner :: big_banner(${title})}" />
     </th:block>
@@ -17,7 +17,7 @@
         <div class="joe_detail">
           <h1 class="joe_detail__title txt-shadow">[[${theme.config.links.links_title}]]</h1>
           <article class="joe_detail__article animated fadeIn" th:with="colorArray=${#strings.arraySplit('#F8D800 ,#0396FF ,#EA5455 ,#7367F0 ,#32CCBC ,#F6416C ,#32B76E ,#9F44D3 ,#F55555 ,#736EFE ,#E96D71 ,#DE4313 ,#D939CD ,#4C83FF ,#F072B6 ,#C346C2 ,#5961F9 ,#FD6585 ,#5569E8 ,#FFC600 ,#FA742B ,#5151E5 ,#BB4E75 ,#FF52E5 ,#4DA037 ,#15D1E2 ,#F067B4 ,#F067B4 ,#ff9a9e ,#00f2fe ,#4facfe ,#f093fb ,#6fa3ef ,#bc99c4 ,#46c47c ,#f9bb3c ,#e8583d ,#f68e5f',',')}">
-            <h3>友链列表<span class="totals" >
+            <h3>友鏈列表<span class="totals" >
 
             </span></h3>
             <div class="links-group" th:each="group : ${groups.?[spec.displayName != '']}">
@@ -52,14 +52,14 @@
             </div>
           </article>
           <article class="joe_detail__article animated fadeIn">
-            <h3>申请格式</h3>
+            <h3>申請格式</h3>
             <div class="link-requirement">
               <th:block th:if="${not #strings.isEmpty(theme.config.links.links_article)}" th:utext="${theme.config.links.links_article}">
 
               </th:block>
               <th:block th:if="${#strings.isEmpty(theme.config.links.links_article)}">
                 <p>
-                  <joe-message type="info" content="<em style=&quot;font-style:normal;font-weight:bold;&quot;>< 博客名称 + 博客地址 + 博客Logo + 博客简介 ></em><br>博客名称：<br>博客地址：<a href=&quot;&quot;></a><br>博客Logo：<a href=&quot;&quot;></a><br>博客简介：<br>(大家在评论中留言即可)">
+                  <joe-message type="info" content="<em style=&quot;font-style:normal;font-weight:bold;&quot;>< 部落格名稱 + 部落格地址 + 部落格Logo + 部落格簡介 ></em><br>部落格名稱：<br>部落格地址：<a href=&quot;&quot;></a><br>部落格Logo：<a href=&quot;&quot;></a><br>部落格簡介：<br>(大家在評論中留言即可)">
                   </joe-message>
                 </p>
               </th:block>
@@ -71,7 +71,7 @@
         <div class="joe_comment">
           <div class="joe_comment_box">
             <div class="box_title">
-            <h2 >评论区</h2>
+            <h2 >評論區</h2>
             </div>
             <th:block th:if="${theme.config.basic.comment_option == 'default'} or ${#strings.trim(theme.config.basic.waline.waline_serverURL) ==''}">
 
