--- a/templates/modules/ads/ads_post.html
+++ b/templates/modules/ads/ads_post.html
@@ -3,9 +3,9 @@
 <th:block th:fragment="ads_post(kind, data)">
     <section class="joe_advert-large">
         <th:block th:if="${kind == 'img'}">
-        <a target="_blank" rel="noopener noreferrer nofollow" th:href="${data.ads_url}" title="广告">
-            <img class="omit" width="100%" th:src="${data.ads_img}" alt="广告"/>
-            <span class="icon">广告</span>
+        <a target="_blank" rel="noopener noreferrer nofollow" th:href="${data.ads_url}" title="廣告">
+            <img class="omit" width="100%" th:src="${data.ads_img}" alt="廣告"/>
+            <span class="icon">廣告</span>
         </a>
         </th:block>
         <th:block th:if="${kind == 'code'}" th:utext="${data.ads_code}">
