--- a/templates/modules/common/aside.html
+++ b/templates/modules/common/aside.html
@@ -6,7 +6,7 @@
   <th:block th:each="aside : ${theme.config.aside.enable_outpost_aside}">
     <th:block th:switch="${aside.template_aside}">
       <th:block th:case="'enable_blogger'">
-<!--        博主信息-->
+<!--        博主資訊-->
         <th:block th:include="~{modules/widgets/asideWidget :: enable_blogger}" />
       </th:block>
       <th:block th:case="'enable_notice'">
@@ -14,11 +14,11 @@
         <th:block th:include="~{modules/widgets/asideWidget :: enable_notice(notice_data = ${aside.aside_notice})}" />
       </th:block>
       <th:block th:case="'enable_picture'">
-<!--        图片-->
+<!--        圖片-->
         <th:block th:include="~{modules/widgets/asideWidget :: enable_picture(pic_data = ${aside.aside_picture})}" />
       </th:block>
       <th:block th:case="'enable_music_player'">
-<!--        音乐播放器-->
+<!--        音樂播放器-->
         <th:block th:include="~{modules/widgets/asideWidget :: enable_music_player(music_data = ${aside.aside_music_player})}" />
       </th:block>
       <th:block th:case="'enable_newest_post'">
@@ -26,23 +26,23 @@
         <th:block th:include="~{modules/widgets/asideWidget :: enable_newest_post}" />
       </th:block>
       <th:block th:case="'enable_lifetime'">
-<!--        人生倒计时-->
+<!--        人生倒計時-->
           <th:block th:include="~{modules/widgets/asideWidget :: enable_lifetime}" />
       </th:block>
       <th:block th:case="'show_newreply'">
-<!--        最新评论-->
+<!--        最新評論-->
         <th:block th:include="~{modules/widgets/asideWidget :: show_newreply(new_reply_data = ${aside.aside_newreply})}" />
       </th:block>
       <th:block th:case="'enable_tag_cloud'">
-<!--        标签云-->
+<!--        標籤雲-->
           <th:block th:include="~{modules/widgets/asideWidget :: enable_tag_cloud(tag_cloud_data = ${aside.aside_tag_cloud})}" />
       </th:block>
       <th:block th:case="'enable_ads_aside'">
-        <!--        侧边栏广告-->
+        <!--        側邊欄廣告-->
           <th:block th:include="~{modules/widgets/asideWidget :: enable_ads_aside(ads_data = ${aside.aside_ads})}" />
       </th:block>
         <th:block th:case="'enable_custom'">
-            <!--        侧边栏广告-->
+            <!--        側邊欄廣告-->
             <th:block th:include="~{modules/widgets/asideWidget :: enable_custom(custom_data = ${aside.aside_custom})}" />
         </th:block>
 
