--- a/templates/modules/common/pagination.html
+++ b/templates/modules/common/pagination.html
@@ -7,7 +7,7 @@
         <th:block
              th:if="${posts.hasPrevious() || posts.hasNext()}"
              th:with="totalPages = ${posts.totalPages}, pageIndex = ${posts.page}">
-            <!--        页面总数小于等于7-->
+            <!--        頁面總數小於等於7-->
             <ul class="joe_pagination" th:if="${(totalPages le 7) && (totalPages gt 0)}">
                 <li class="prev"
                 th:classappend="${1 eq pageIndex} ? ' disabled':''">
@@ -28,7 +28,7 @@
                     </a
                     ></li>
             </ul>
-            <!--        页面总数大于7-->
+            <!--        頁面總數大於7-->
             <ul class="joe_pagination" th:if="${totalPages gt 7}">
                 <li class="prev"
                     th:classappend="${1 eq pageIndex} ? ' disabled':''">
@@ -40,7 +40,7 @@
                 <li th:classappend="${1 eq pageIndex} ? 'active':''">
                     <a href="/">1</a>
                 </li>
-                <!-- 当前页面小于等于4 -->
+                <!-- 當前頁面小於等於4 -->
                 <li th:classappend="${index eq pageIndex} ? 'active':''"
                     th:each="index : ${#numbers.sequence(2,5)}"
                     th:if="${pageIndex le 4}">
@@ -50,7 +50,7 @@
                 <li th:if="${pageIndex le 4}">
                     <a href="#">...</a>
                 </li>
-                <!-- 最后一页与当前页面之差小于等于3 -->
+                <!-- 最後一頁與當前頁面之差小於等於3 -->
                 <li th:if="${totalPages - pageIndex le 3}">
                     <a href="#">...</a>
                 </li>
@@ -61,7 +61,7 @@
                        th:text="${index}">
                     </a>
                 </li>
-                <!-- 最后一页与当前页面之差大于3 且当前页面大于4 -->
+                <!-- 最後一頁與當前頁面之差大於3 且當前頁面大於4 -->
                 <li th:if="${(pageIndex gt 4) && (totalPages - pageIndex gt 3)}">
                     <a href="#">...</a>
                 </li>
@@ -75,7 +75,7 @@
                 <li th:if="${(pageIndex gt 4) && (totalPages - pageIndex gt 3)}">
                     <a href="#">...</a>
                 </li>
-                <!-- 尾页 -->
+                <!-- 尾頁 -->
                 <li th:classappend="${totalPages eq pageIndex} ? 'active':''"
                     >
                     <a th:href="${'/page/'+totalPages}"
@@ -98,7 +98,7 @@
         <th:block
                 th:if="${archives.hasPrevious() || archives.hasNext()}"
                 th:with="totalPages = ${archives.totalPages}, pageIndex = ${archives.page}">
-            <!--        页面总数小于等于7-->
+            <!--        頁面總數小於等於7-->
             <ul class="joe_pagination" th:if="${(totalPages le 7) && (totalPages gt 0)}">
                 <li class="prev"
                     th:classappend="${1 eq pageIndex} ? ' disabled':''">
@@ -118,7 +118,7 @@
                     </a
                     ></li>
             </ul>
-            <!--        页面总数大于7-->
+            <!--        頁面總數大於7-->
             <ul class="joe_pagination" th:if="${totalPages gt 7}">
                 <li class="prev"
                     th:classappend="${1 eq pageIndex} ? ' disabled':''">
@@ -130,7 +130,7 @@
                 <li th:classappend="${1 eq pageIndex} ? 'active':''">
                     <a href="/">1</a>
                 </li>
-                <!-- 当前页面小于等于4 -->
+                <!-- 當前頁面小於等於4 -->
                 <li th:classappend="${index eq pageIndex} ? 'active':''"
                     th:each="index : ${#numbers.sequence(2,5)}"
                     th:if="${pageIndex le 4}">
@@ -140,7 +140,7 @@
                 <li th:if="${pageIndex le 4}">
                     <a href="#">...</a>
                 </li>
-                <!-- 最后一页与当前页面之差小于等于3 -->
+                <!-- 最後一頁與當前頁面之差小於等於3 -->
                 <li th:if="${totalPages - pageIndex le 3}">
                     <a href="#">...</a>
                 </li>
@@ -151,7 +151,7 @@
                        th:text="${index}">
                     </a>
                 </li>
-                <!-- 最后一页与当前页面之差大于3 且当前页面大于4 -->
+                <!-- 最後一頁與當前頁面之差大於3 且當前頁面大於4 -->
                 <li th:if="${(pageIndex gt 4) && (totalPages - pageIndex gt 3)}">
                     <a href="#">...</a>
                 </li>
@@ -165,7 +165,7 @@
                 <li th:if="${(pageIndex gt 4) && (totalPages - pageIndex gt 3)}">
                     <a href="#">...</a>
                 </li>
-                <!-- 尾页 -->
+                <!-- 尾頁 -->
                 <li th:classappend="${totalPages eq pageIndex} ? 'active':''"
                 >
                     <a th:href="@{/archives/page/}+${totalPages}"
@@ -188,7 +188,7 @@
         <th:block
                 th:if="${posts.hasPrevious() || posts.hasNext()}"
                 th:with="totalPages = ${posts.totalPages}, pageIndex = ${posts.page}">
-            <!--        页面总数小于等于7-->
+            <!--        頁面總數小於等於7-->
             <ul class="joe_pagination" th:if="${(totalPages le 7) && (totalPages gt 0)}">
                 <li class="prev"
                     th:classappend="${1 eq pageIndex} ? ' disabled':''">
@@ -208,7 +208,7 @@
                     </a
                     ></li>
             </ul>
-            <!--        页面总数大于7-->
+            <!--        頁面總數大於7-->
             <ul class="joe_pagination" th:if="${totalPages gt 7}">
                 <li class="prev"
                     th:classappend="${1 eq pageIndex} ? ' disabled':''">
@@ -220,7 +220,7 @@
                 <li th:classappend="${1 eq pageIndex} ? 'active':''">
                     <a href="/">1</a>
                 </li>
-                <!-- 当前页面小于等于4 -->
+                <!-- 當前頁面小於等於4 -->
                 <li th:classappend="${index eq pageIndex} ? 'active':''"
                     th:each="index : ${#numbers.sequence(2,5)}"
                     th:if="${pageIndex le 4}">
@@ -230,7 +230,7 @@
                 <li th:if="${pageIndex le 4}">
                     <a href="#">...</a>
                 </li>
-                <!-- 最后一页与当前页面之差小于等于3 -->
+                <!-- 最後一頁與當前頁面之差小於等於3 -->
                 <li th:if="${totalPages - pageIndex le 3}">
                     <a href="#">...</a>
                 </li>
@@ -241,7 +241,7 @@
                        th:text="${index}">
                     </a>
                 </li>
-                <!-- 最后一页与当前页面之差大于3 且当前页面大于4 -->
+                <!-- 最後一頁與當前頁面之差大於3 且當前頁面大於4 -->
                 <li th:if="${(pageIndex gt 4) && (totalPages - pageIndex gt 3)}">
                     <a href="#">...</a>
                 </li>
@@ -255,7 +255,7 @@
                 <li th:if="${(pageIndex gt 4) && (totalPages - pageIndex gt 3)}">
                     <a href="#">...</a>
                 </li>
-                <!-- 尾页 -->
+                <!-- 尾頁 -->
                 <li th:classappend="${totalPages eq pageIndex} ? 'active':''"
                 >
                     <a th:href="${category.status.permalink}+'/page/' + ${totalPages}"
@@ -278,7 +278,7 @@
         <th:block
                 th:if="${posts.hasPrevious() || posts.hasNext()}"
                 th:with="totalPages = ${posts.totalPages}, pageIndex = ${posts.page}">
-            <!--        页面总数小于等于7-->
+            <!--        頁面總數小於等於7-->
             <ul class="joe_pagination" th:if="${(totalPages le 7) && (totalPages gt 0)}">
                 <li class="prev"
                     th:classappend="${1 eq pageIndex} ? ' disabled':''">
@@ -298,7 +298,7 @@
                     </a
                     ></li>
             </ul>
-            <!--        页面总数大于7-->
+            <!--        頁面總數大於7-->
             <ul class="joe_pagination" th:if="${totalPages gt 7}">
                 <li class="prev"
                     th:classappend="${1 eq pageIndex} ? ' disabled':''">
@@ -310,7 +310,7 @@
                 <li th:classappend="${1 eq pageIndex} ? 'active':''">
                     <a href="/">1</a>
                 </li>
-                <!-- 当前页面小于等于4 -->
+                <!-- 當前頁面小於等於4 -->
                 <li th:classappend="${index eq pageIndex} ? 'active':''"
                     th:each="index : ${#numbers.sequence(2,5)}"
                     th:if="${pageIndex le 4}">
@@ -320,7 +320,7 @@
                 <li th:if="${pageIndex le 4}">
                     <a href="#">...</a>
                 </li>
-                <!-- 最后一页与当前页面之差小于等于3 -->
+                <!-- 最後一頁與當前頁面之差小於等於3 -->
                 <li th:if="${totalPages - pageIndex le 3}">
                     <a href="#">...</a>
                 </li>
@@ -331,7 +331,7 @@
                        th:text="${index}">
                     </a>
                 </li>
-                <!-- 最后一页与当前页面之差大于3 且当前页面大于4 -->
+                <!-- 最後一頁與當前頁面之差大於3 且當前頁面大於4 -->
                 <li th:if="${(pageIndex gt 4) && (totalPages - pageIndex gt 3)}">
                     <a href="#">...</a>
                 </li>
@@ -345,7 +345,7 @@
                 <li th:if="${(pageIndex gt 4) && (totalPages - pageIndex gt 3)}">
                     <a href="#">...</a>
                 </li>
-                <!-- 尾页 -->
+                <!-- 尾頁 -->
                 <li th:classappend="${totalPages eq pageIndex} ? 'active':''"
                 >
                     <a th:href="${tag.status.permalink}+'/page/' + ${totalPages}"
@@ -368,7 +368,7 @@
         <th:block
                 th:if="${moments.hasPrevious() || moments.hasNext()}"
                 th:with="totalPages = ${moments.totalPages}, pageIndex = ${moments.page}">
-            <!--        页面总数小于等于7-->
+            <!--        頁面總數小於等於7-->
             <ul class="joe_pagination" th:if="${(totalPages le 7) && (totalPages gt 0)}">
                 <li class="prev"
                     th:classappend="${1 eq pageIndex} ? ' disabled':''">
@@ -388,7 +388,7 @@
                     </a
                     ></li>
             </ul>
-            <!--        页面总数大于7-->
+            <!--        頁面總數大於7-->
             <ul class="joe_pagination" th:if="${totalPages gt 7}">
                 <li class="prev"
                     th:classappend="${1 eq pageIndex} ? ' disabled':''">
@@ -400,7 +400,7 @@
                 <li th:classappend="${1 eq pageIndex} ? 'active':''">
                     <a href="/">1</a>
                 </li>
-                <!-- 当前页面小于等于4 -->
+                <!-- 當前頁面小於等於4 -->
                 <li th:classappend="${index eq pageIndex} ? 'active':''"
                     th:each="index : ${#numbers.sequence(2,5)}"
                     th:if="${pageIndex le 4}">
@@ -410,7 +410,7 @@
                 <li th:if="${pageIndex le 4}">
                     <a href="#">...</a>
                 </li>
-                <!-- 最后一页与当前页面之差小于等于3 -->
+                <!-- 最後一頁與當前頁面之差小於等於3 -->
                 <li th:if="${totalPages - pageIndex le 3}">
                     <a href="#">...</a>
                 </li>
@@ -421,7 +421,7 @@
                        th:text="${index}">
                     </a>
                 </li>
-                <!-- 最后一页与当前页面之差大于3 且当前页面大于4 -->
+                <!-- 最後一頁與當前頁面之差大於3 且當前頁面大於4 -->
                 <li th:if="${(pageIndex gt 4) && (totalPages - pageIndex gt 3)}">
                     <a href="#">...</a>
                 </li>
@@ -435,7 +435,7 @@
                 <li th:if="${(pageIndex gt 4) && (totalPages - pageIndex gt 3)}">
                     <a href="#">...</a>
                 </li>
-                <!-- 尾页 -->
+                <!-- 尾頁 -->
                 <li th:classappend="${totalPages eq pageIndex} ? 'active':''"
                 >
                     <a th:href="@{/moments}+'/page/' + ${totalPages}"
