--- a/templates/modules/macro/article.html
+++ b/templates/modules/macro/article.html
@@ -6,9 +6,9 @@
         <ul class="joe_index__title-title passage-list-tabs${(settings.enable_index_list_ajax!=true)?then(' default','')}">
             <li class="item active" data-type="1">最新文章</li>
             <th:block th:if="${theme.config.home.enable_index_list_ajax}">
-<!--            <li class="item" data-type="2">热门文章</li>-->
+<!--            <li class="item" data-type="2">熱門文章</li>-->
             <li class="item" data-type="3">最近更新</li>
-<!--            <li class="item" data-type="4">最多点赞</li>-->
+<!--            <li class="item" data-type="4">最多點贊</li>-->
             <li class="line"></li>
             </th:block>
         </ul>
