--- a/templates/modules/macro/hot_category.html
+++ b/templates/modules/macro/hot_category.html
@@ -4,10 +4,10 @@
   <div class="joe_index__hot">
     <div class="joe_index__title">
       <ul class="joe_index__title-title default">
-        <li class="item active" data-type="created">精品分类</li>
+        <li class="item active" data-type="created">精品分類</li>
       </ul>
       <div class="joe_index__title-notice">
-        <a th:href="@{/categories}" target="_blank" rel="noopener noreferrer nofollow"><i class="joe-font joe-icon-application"></i>全部分类</a>
+        <a th:href="@{/categories}" target="_blank" rel="noopener noreferrer nofollow"><i class="joe-font joe-icon-application"></i>全部分類</a>
       </div>
     </div>
       <ul class="joe_index__hot-list hotlist">
