--- a/templates/modules/macro/relate.html
+++ b/templates/modules/macro/relate.html
@@ -5,7 +5,7 @@
   <section class="joe_aside__item newest">
     <div class="joe_aside__item-title">
       <i class="joe-font joe-icon-huo"></i>
-      <span class="text">相关文章</span>
+      <span class="text">相關文章</span>
     </div>
     <div class="joe_aside__item-contain">
 
