--- a/templates/modules/macro/tail.html
+++ b/templates/modules/macro/tail.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <th:block th:fragment="tail" th:with="source_link=${(#strings.trim(theme.config.basic.source_link) !='' && theme.config.basic.enable_source_link)? theme.config.basic.source_link : '/themes/theme-Joe3'}">
-<!--    ===== 引入脚本 start ===== -->
+<!--    ===== 引入指令碼 start ===== -->
 <!--    <th:block th:if="${htmlType == 'index' && theme.config.home.enable_index_list_effect == true} or ${htmlType == 'journals' && theme.config.journals.enable_journal_effect == true} or ${htmlType == 'photos' && theme.config.photos.enable_photos_effect == true}">-->
         <script th:src="${source_link+'/assets/lib/wowjs/wow.min.js'}"></script>
 <!--    </th:block>-->
@@ -41,7 +41,7 @@
     <th:block th:if="${htmlType == 'post'}">
         <script th:src="${source_link+'/assets/lib/jquery-qrcode/jquery.qrcode.min.js'}"></script>
     </th:block>
-<!--相册-->
+<!--相簿-->
     <th:block th:if="${htmlType == 'photos'}">
         <script th:src="${source_link+'/assets/lib/justifiedGallery/justifiedGallery.min.js'}"></script>
         <script th:src="${source_link+'/assets/lib/masonry/masonry.pkgd.min.js'}"></script>
@@ -50,7 +50,7 @@
 
     </th:block>
 
-<!--===== 引入页面级js start =====-->
+<!--===== 引入頁面級js start =====-->
     <script th:src="${source_link+'/assets/js/min/common.min.js?v='+theme.spec.version}"></script>
     <th:block th:if="${htmlType == 'post'} or ${htmlType == 'journals'} or ${htmlType == 'sheet'}">
         <script th:src="${source_link+'/assets/lib/prism/prism.min.js'}"></script>
@@ -78,24 +78,24 @@
     <script th:src="${source_link+'/assets/js/min/beauty.min.js'}"></script>
     </th:block>
 
-    <!-- ===== 引入页面级js end ===== -->
+    <!-- ===== 引入頁面級js end ===== -->
 
-<!-- ===== 引入脚本 start ===== -->
+<!-- ===== 引入指令碼 start ===== -->
 
     <th:block th:if="${theme.config.footer.enable_busuanzi}">
-<!-- 卜算子 -->
+<!-- 卜運算元 -->
         <script th:src="${source_link+'/assets/lib/busuanzi/busuanzi.min.js'}"></script>
     </th:block>
 
-<!-- ===== 引入脚本 end =====-->
+<!-- ===== 引入指令碼 end =====-->
 
     <th:block th:if="${theme.config.custom.custom_external_js_body != null} and ${theme.config.custom.custom_external_js_body != ''}">
-<!-- 自定义外部js -->
+<!-- 自定義外部js -->
         <script th:src="${theme.config.custom.custom_external_js_body}"></script>
     </th:block>
     <th:block th:if="${theme.config.custom.custom_js_body != null} and ${#strings.trim(theme.config.custom.custom_js_body) != ''}">
 
-    <!-- 自定义js -->
+    <!-- 自定義js -->
         <script type="text/javascript" th:inline="javascript" th:utext="${theme.config.custom.custom_js_body}"></script>
     </th:block>
     <th:block th:if="${theme.config.other.enable_debug}">
@@ -103,32 +103,32 @@
     <script th:src="${source_link+'/assets/lib/vconsole/vconsole.min.js'}"></script>
     </th:block>
 
-<!--搜索点击-->
+<!--搜尋點選-->
     <script>
         const searchButton = document.getElementById("halo-search");
         searchButton.addEventListener("click", function() {
             SearchWidget.open();
         });
     </script>
-<!--    大图配置-->
+<!--    大圖配置-->
     <script th:inline="javascript" th:if="${theme.config.beauty.enable_big_banner}">
-        // 以下配置参数均为默认值
+        // 以下配置引數均為預設值
         new EvanBigBanner({
-            followMode: false,                       // 跟随模式
-            followTheme: false,                      // 跟随主题
-            titlePrint: true,                        // 是否启用打字机效果
-            titlePrintInterval: 300,                 // 打字机速度
-            titleTiktok: false,                      // 标题文字抖音效果
-            titleText: /*[[${(theme.config.beauty.big_banner_title != null and theme.config.beauty.big_banner_title != '') ? theme.config.beauty.big_banner_title : site.title}]]*/ "",    // 标题文字
-            titleColor: "#ffffff",                   // 标题文字颜色
-            titleShadow: "-3px 2px 6px #1c1f21",     // 标题文字阴影
-            hitokotoParams: {},                      // 一言参数，参考：https://developer.hitokoto.cn/sentence/#%E8%AF%B7%E6%B1%82%E5%8F%82%E6%95%B0
+            followMode: false,                       // 跟隨模式
+            followTheme: false,                      // 跟隨主題
+            titlePrint: true,                        // 是否啟用打字機效果
+            titlePrintInterval: 300,                 // 打字機速度
+            titleTiktok: false,                      // 標題文字抖音效果
+            titleText: /*[[${(theme.config.beauty.big_banner_title != null and theme.config.beauty.big_banner_title != '') ? theme.config.beauty.big_banner_title : site.title}]]*/ "",    // 標題文字
+            titleColor: "#ffffff",                   // 標題文字顏色
+            titleShadow: "-3px 2px 6px #1c1f21",     // 標題文字陰影
+            hitokotoParams: {},                      // 一言引數，參考：https://developer.hitokoto.cn/sentence/#%E8%AF%B7%E6%B1%82%E5%8F%82%E6%95%B0
             hitokotoApi: "https://v1.hitokoto.cn",   // 一言API
-            hitokotoColor: "#ffffff",                // 一言文字颜色
+            hitokotoColor: "#ffffff",                // 一言文字顏色
             hitokotoEnable: /*[[${theme.config.beauty.enable_big_banner_hitokoto}]]*/true,                    // 是否使用一言
         });
 
-        // 以上配置均为默认值，可直接使用进行初始化
+        // 以上配置均為預設值，可直接使用進行初始化
         // new EvanBigBanner();
 
     </script>
