--- a/templates/modules/widgets/asideWidget.html
+++ b/templates/modules/widgets/asideWidget.html
@@ -34,7 +34,7 @@
     <section class="joe_aside__item timelife">
         <div class="joe_aside__item-title">
             <i class="joe-font joe-icon-yinfu"></i>
-            <span class="text">我的歌单</span>
+            <span class="text">我的歌單</span>
         </div>
         <div id="aplayer" class="aplayer" th:data-id="${music_data.music_id}" list-max-height="20px" data-server="netease" data-type="playlist" data-fixed="false" data-listfolded="true" data-order="random"  data-mode="#f3f3f7"></div>
     </section>
@@ -47,7 +47,7 @@
     <section class="joe_aside__item timelife">
         <div class="joe_aside__item-title">
             <i class="joe-font joe-icon-shalou"></i>
-            <span class="text">人生倒计时</span>
+            <span class="text">人生倒計時</span>
         </div>
         <div class="joe_aside__item-contain"></div>
     </section>
@@ -57,7 +57,7 @@
     <section class="joe_aside__item newreply">
         <div class="joe_aside__item-title">
             <i class="joe-font joe-icon-message"></i>
-            <span class="text">最新回复</span>
+            <span class="text">最新回覆</span>
         </div>
 
         <ul class="joe_aside__item-contain"
@@ -66,7 +66,7 @@
                     th:each="result : ${commentFinder.list(null,1,new_reply_data.show_newreply_num)}">
                 <li class="item">
                     <div class="user">
-                        <img width="35" height="35" class="avatar lazyload" th:data-src="${result.owner.avatar ?: '/themes/theme-Joe3/assets/img/peeps-avatar.png'} " th:src="${theme.config.blogger.lazyload_avatar}"  alt="头像">
+                        <img width="35" height="35" class="avatar lazyload" th:data-src="${result.owner.avatar ?: '/themes/theme-Joe3/assets/img/peeps-avatar.png'} " th:src="${theme.config.blogger.lazyload_avatar}"  alt="頭像">
                         <div class="info">
                             <div class="author">[[${result.owner.displayName}]]</div>
                             <span class="date">[[${#temporals.format(result.spec.creationTime, 'yyyy-MM-dd HH:mm:ss')}]]</span>
@@ -139,20 +139,20 @@
 
                             const timestamp = new Date(comment.time);
 
-                            // 获取年、月、日、时、分、秒
+                            // 獲取年、月、日、時、分、秒
                             const year = timestamp.getFullYear();
-                            const month = timestamp.getMonth() + 1; // 月份是从0开始的，所以要加1
+                            const month = timestamp.getMonth() + 1; // 月份是從0開始的，所以要加1
                             const day = timestamp.getDate();
                             const hours = timestamp.getHours();
                             const minutes = timestamp.getMinutes();
                             const seconds = timestamp.getSeconds();
 
-                            // 构建日期时间字符串
+                            // 構建日期時間字串
                             const commentTime = `${year}-${month < 10 ? '0' : ''}${month}-${day < 10 ? '0' : ''}${day} ${hours < 10 ? '0' : ''}${hours}:${minutes < 10 ? '0' : ''}${minutes}:${seconds < 10 ? '0' : ''}${seconds}`;
 
                             return `<li class="item">
                     <div class="user">
-                        <img width="35" height="35" class="avatar lazyload" data-src="${comment.avatar}" src="${ThemeConfig.lazyload_avatar}"  alt="头像">
+                        <img width="35" height="35" class="avatar lazyload" data-src="${comment.avatar}" src="${ThemeConfig.lazyload_avatar}"  alt="頭像">
                         <div class="info">
                             <div class="author">${comment.nick}</div>
                             <span class="date">${commentTime}</span>
@@ -175,7 +175,7 @@
     <section class="joe_aside__item tags-cloud" id="tags-cloud">
         <div class="joe_aside__item-title">
             <i class="joe-font joe-icon-tag"></i>
-            <span class="text">标签云</span>
+            <span class="text">標籤雲</span>
 
             <a class="tags_more" th:href="@{/tags}">更多<i class="joe-font joe-icon-more-right"></i></a>
 
@@ -192,12 +192,12 @@
             </div>
             <th:block th:if="${tag_cloud_data.tag_cloud_type == '3d'}">
                 <div id="tags-3d">
-                    <div class="empty">加载中…</div>
+                    <div class="empty">載入中…</div>
                 </div>
             </th:block>
         </div>
         <!--    <#else>-->
-        <!--    <div class="empty">暂无标签</div>-->
+        <!--    <div class="empty">暫無標籤</div>-->
         <!--  </#if>-->
         <!--</@tagTag>-->
     </section>
