--- a/templates/page_links.html
+++ b/templates/page_links.html
@@ -7,7 +7,7 @@
     <body>
     <div id="Joe">
         <th:block th:replace="~{modules/macro/navbar :: navbar}" />
-        <!--          首页大图-->
+        <!--          首頁大圖-->
         <th:block th:if="${theme.config.beauty.enable_big_banner}">
             <th:block th:replace="~{modules/macro/big_banner :: big_banner(${title})}" />
         </th:block>
@@ -17,7 +17,7 @@
                 <div class="joe_detail">
                     <h1 class="joe_detail__title txt-shadow">[[${singlePage.spec.title}]]</h1>
                     <article class="joe_detail__article animated fadeIn" th:with="colorArray=${#strings.arraySplit('#F8D800 ,#0396FF ,#EA5455 ,#7367F0 ,#32CCBC ,#F6416C ,#32B76E ,#9F44D3 ,#F55555 ,#736EFE ,#E96D71 ,#DE4313 ,#D939CD ,#4C83FF ,#F072B6 ,#C346C2 ,#5961F9 ,#FD6585 ,#5569E8 ,#FFC600 ,#FA742B ,#5151E5 ,#BB4E75 ,#FF52E5 ,#4DA037 ,#15D1E2 ,#F067B4 ,#F067B4 ,#ff9a9e ,#00f2fe ,#4facfe ,#f093fb ,#6fa3ef ,#bc99c4 ,#46c47c ,#f9bb3c ,#e8583d ,#f68e5f',',')}">
-                        <h3>友链列表<span class="totals" >
+                        <h3>友鏈列表<span class="totals" >
 
             </span></h3>
                         <div class="links-group" th:each="group : ${linkFinder.groupBy()}"
@@ -60,7 +60,7 @@
                 <div class="joe_comment">
                     <div class="joe_comment_box">
                         <div class="box_title">
-                        <h2 >评论区</h2>
+                        <h2 >評論區</h2>
                         </div>
                         <th:block th:if="${theme.config.basic.comment_option == 'default'} or ${#strings.trim(theme.config.basic.waline.waline_serverURL) ==''}">
 
